add store manager project

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem-vindo à StoreManager!</h1>
+
+    <p>Conheça as lojas e quiosques do Shopping StoreManager!</p>
+
+    <p>Acesse as lojas <a href="/Store/Index">aqui</a>.</p>
+    
+    <p>É administrador? Acesse a Área Administrativa <a href="/Store/IndexAdmin">aqui</a>.</p>
 </div>
